--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "enlightener/php-cors",
     "description": "Enlightener PHP CORS (Cross-Origin Resource Sharing) is a small library supported to prevent attacks from a cross-origin request",
-    "keywords": ["cors", "laravel", "symfony", "php"],
+    "keywords": ["cors", "php", "laravel", "symfony"],
     "homepage": "https://github.com/haunv-be/php-cors",
     "type": "library",
     "license": "MIT",
@@ -13,11 +13,20 @@
     ],
     "autoload": {
         "psr-4": {
-            "Enlightener\\Http\\": "src/Cors/"
+            "Enlightener\\Cors\\": "src/Cors/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Enlightener\\Test\\Cors\\": "Test/"
         }
     },
     "require": {
         "php": ">=7.4"
     },
-    "minimum-stability": "stable"
+    "require-dev": {
+        "phpunit/phpunit": "^9.6",
+        "laravel/framework": "^7|^8|^9"
+    },
+    "minimum-stability": "dev"
 }
