--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
-        "laravel/framework": "6^|^7|^8|^9|^10"
+        "laravel/framework": "^6|^7|^8|^9|^10"
     },
     "minimum-stability": "dev"
 }
